--- a/quests/Python-quest_SQL.ipynb
+++ b/quests/Python-quest_SQL.ipynb
@@ -1067,7 +1067,7 @@
         "import pandas as pd\r\n",
         "\r\n",
         "# Please replace by your user and your password\r\n",
-        "conn = mysql.connector.connect(user='toyscie', password='WILD4Rdata!',\r\n",
+        "conn = mysql.connector.connect(user='toyscie', password='YOUR_PASSWORD',\r\n",
         "                              host='51.68.18.102',port = '23456',\r\n",
         "                              database='toys_and_models')\r\n",
         "\r\n",
