Re-uploaded NN-quest_hyperparameters_Keras.ipynb

--- a/quests/NN-quest_hyperparameters_Keras.ipynb
+++ b/quests/NN-quest_hyperparameters_Keras.ipynb
@@ -709,6 +709,7 @@
     "source_hash": "9df37d2d",
     "execution_start": 1639347155769,
     "execution_millis": 6832,
+    "is_output_hidden": true,
     "deepnote_cell_type": "code"
    },
    "source": "!pip install -U keras-tuner\n",
@@ -867,15 +868,13 @@
    "execution_count": 53
   },
   {
-   "cell_type": "code",
-   "source": "",
+   "cell_type": "markdown",
+   "source": "We successfully optimized hyperparameters using Keras tuner.",
    "metadata": {
     "tags": [],
-    "cell_id": "00047-b938a429-6f78-4227-bf54-0508b55eb5e0",
-    "deepnote_cell_type": "code"
-   },
-   "outputs": [],
-   "execution_count": null
+    "cell_id": "00047-cb9d397c-aaf6-461f-abf7-9e4fe3bd444c",
+    "deepnote_cell_type": "markdown"
+   }
   },
   {
    "cell_type": "markdown",
